Resolving Multiple Issues - Remember to clear your browser cache
-issue#920: Issue with scrollbars after update to 1.1.19 related to #902
-issue#921: Tree Mode no longer expands to accomodate full tree item
names
-issue#929: Overlapping frames on certain themes

--- a/include/themes/classic/main.css
+++ b/include/themes/classic/main.css
@@ -39,6 +39,7 @@ td, th, select {
 
 th {
 	border-right: 1px groove white;
+	white-space: nowrap;
 }
 
 img {
